--- a/janesha/dribbleapp/static/dribblepage.html
+++ b/janesha/dribbleapp/static/dribblepage.html
@@ -7,10 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body class="bg-light vh-100 overflow-hidden d-flex flex-column">
-
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="#">Dribbble</a>
@@ -32,15 +29,11 @@
       </div>
     </div>
   </nav>
-
-  <!-- Header -->
   <div class="bg-dark border-bottom text-center py-1">
     <h6 class="text-white mb-0">What are you working on?</h6>
     <small class="text-light">Dribbble is show and tell for designers.</small><br>
     <button class="btn btn-danger btn-sm mt-1">Sign up</button>
   </div>
-
-  <!-- Dropdowns -->
   <div class="container border-top py-2 text-center">
     <div class="d-inline-flex justify-content-center gap-2 flex-wrap">
       <div class="dropdown">
@@ -64,9 +57,7 @@
         </ul>
       </div>
       <div class="dropdown">
-        <button class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown">
-          Now
-        </button>
+        <button class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown">Now</button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">Now</a></li>
           <li><a class="dropdown-item" href="#">This Week</a></li>
@@ -75,16 +66,8 @@
       </div>
     </div>
   </div>
-
-  <!-- Gallery -->
   <div class="container-fluid flex-grow-1 d-flex align-items-center justify-content-center">
     <div class="row g-2 w-100 justify-content-center px-2">
-
-      <!-- Reusable card layout (6 per row × 3 rows = 18 total) -->
-      <!-- Each card’s image height reduced to fit all within one screen -->
-      <!-- Replace img src values with your actual images -->
-
-      <!-- Example card template -->
       <div class="col-2">
         <div class="card border-0 shadow-sm text-center">
           <img src="famous.png" class="card-img-top">
@@ -94,8 +77,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Duplicate this pattern for 18 items -->
       <div class="col-2">
         <div class="card border-0 shadow-sm text-center">
             <img src="balkanbrother.jpg" class="card-img-top">
@@ -246,11 +227,8 @@
 
     </div>
   </div>
-
-  <!-- Footer -->
   <footer class="bg-dark text-light text-center py-1">
     <small>&copy; 2025 Dribbble | Janesha (25018817)</small>
   </footer>
-
 </body>
 </html>
